--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -47,14 +47,14 @@
                 <!---------------------------------------------------------------------->
                 <!-- INGRESAR / GOOGLE -->
                 <!---------------------------------------------------------------------->
-                <div class="row text-center p-4 w-100">
+                <div class="row text-center p-0 w-100">
                     <div class="col">
                         <!-- Normal Login -->
-                        <button class="btn btn-success btn-block btn-lg" type="submit">ENTRAR</button>
+                        <button class="btn btn-success btn-block btn-lg p-2" type="submit">ENTRAR</button>
                     </div>
                     <div class="col">
                         <!-- Google Login -->
-                        <button class="btn btn-danger btn-block btn-lg" type="button" id="btnGoogle" data-toggle="tooltip">Google
+                        <button class="btn btn-danger btn-block btn-lg p-2" type="button" id="btnGoogle" data-toggle="tooltip">Google
                         </button>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                 <!-- REGISTRARSE -->
                 <!---------------------------------------------------------------------->
                 <div class="mt-4 text-center">
-                    No tienes cuenta? <a routerLink="/register" class="text-primary m-l-5"><b>Crear cuenta</b></a>
+                    No tenes cuenta? | <a routerLink="/register" class="text-primary m-l-5"><b class="text-uppercase">Crear cuenta</b></a>
                 </div>
                 <div class="mt-4 text-center">
                     <a routerLink="/home">Volver al inicio</a>
