--- a/src/app/pages/public/screen/screen.component.html
+++ b/src/app/pages/public/screen/screen.component.html
@@ -1,5 +1,5 @@
 <div class="row p-3 animated fadeIn">
-    <div class="col-md-6">
+    <div class="col-md-6" style="min-width: 18rem;">
 
         <!-- ======================================================== -->
         <!-- SU TURNO -->
@@ -84,7 +84,7 @@
 
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-6" style="min-width: 18rem;">
 
         <!-- ======================================================== -->
         <!-- HISTORIAL DE LLAMADAS -->
