--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -7,32 +7,31 @@
 
         <!-- Title -->
         <span *ngIf="user?.id_company?.tx_company_name || ticketsService.companyData">{{user?.id_company?.tx_company_name || ticketsService.companyData.tx_company_name}}</span>
-        <span *ngIf="!userService.usuario && !ticketsService.companyData">WebTurnos 0.0.1</span>
+        <span *ngIf="!userService.user && !ticketsService.companyData">WebTurnos 0.0.1</span>
         <span class="example-spacer"></span>
 
         <!-- Chat Icon -->
-        <button *ngIf="ticketsService.myTicket" (click)="toggle('chat')" mat-mini-fab>
-            <mat-icon [matBadge]="unreadMessages" [matBadgeHidden]="hiddenBadge" matBadgeColor="warn">chat</mat-icon>
+        <button mat-icon-button *ngIf="ticketsService.myTicket" (click)="toggle('chat')">
+            <mat-icon [matBadge]="unreadMessages" [matBadgeHidden]="hiddenBadge" matBadgeColor="warn" matBadgeSize="small">chat</mat-icon>
         </button>
 
         <!-- Login Button -->
-        <button *ngIf="!userService.usuario && !ticketsService.publicMode && !ticketsService.myTicket"
+        <button *ngIf="!userService.user && !ticketsService.publicMode && !ticketsService.myTicket"
             class="btn btn-primary" routerLink="/login">Login</button>
 
         <!-- User Icon -->
-        <div *ngIf="userService.usuario">
+        <div *ngIf="userService.user">
             <button mat-icon-button [matMenuTriggerFor]="menu">
-                <mat-icon [matBadge]="unreadMessages" [matBadgeHidden]="hiddenBadge" matBadgeColor="warn">account_circle
-                </mat-icon>
+                <mat-icon>account_circle</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
                 <button mat-menu-item>
                     <mat-icon>account_circle</mat-icon>
-                    <span>{{userService.usuario.tx_name}}</span>
+                    <span>{{userService.user.tx_name}}</span>
                 </button>
                 <button mat-menu-item disabled>
                     <mat-icon>email</mat-icon>
-                    <span>{{userService.usuario.tx_email}}</span>
+                    <span>{{userService.user.tx_email}}</span>
                 </button>
                 <div class="p-2">
                     <button class="btn btn-sm btn-block btn-danger" (click)="userService.logout()"> Salir </button>
