--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,66 +1,62 @@
-<div class="turno-container p-2" style="text-align: -webkit-center;">
-    <div class="card bg-light mb-3" style="min-width: 18rem; max-width: 30rem;">
+<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;text-align: -webkit-center;">
 
-        <form autocomplete="off" class="form-container m-3" ngNativeValidate [formGroup]="forma"
-            (ngSubmit)="registrarUsuario()" id="loginform" action="index.html">
+    <form autocomplete="off" class="form-container m-3" ngNativeValidate [formGroup]="forma"
+        (ngSubmit)="registrarUsuario()" id="loginform" action="index.html">
 
 
-            <!-- User -->
+        <!-- User -->
 
-            <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-                <mat-label>Tu Nombre</mat-label>
+        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+            <mat-label>Tu Nombre</mat-label>
 
-                <input matInput placeholder="Diego Perez" formControlName="name" name="name" type="text" required>
-            </mat-form-field>
+            <input matInput placeholder="Diego Perez" formControlName="name" name="name" type="text" required>
+        </mat-form-field>
 
-            <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-                <mat-label>Email</mat-label>
-                <mat-error *ngIf="forma.errors?.emailExists">Este Email ya se encuentra registrado!</mat-error>
-                <input matInput placeholder="diego@perez.com" formControlName="email" name="email" type="email"
-                    (keyup)="checkEmailExists()" required>
-            </mat-form-field>
+        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+            <mat-label>Email</mat-label>
+            <mat-error *ngIf="forma.errors?.emailExists">Este Email ya se encuentra registrado!</mat-error>
+            <input matInput placeholder="diego@perez.com" formControlName="email" name="email" type="email"
+                (keyup)="checkEmailExists()" required>
+        </mat-form-field>
 
-            <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-                <mat-label>Clave</mat-label>
-                <input matInput placeholder="Clave" formControlName="password1" name="password1" type="password"
-                    required>
-            </mat-form-field>
+        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+            <mat-label>Clave</mat-label>
+            <input matInput placeholder="Clave" formControlName="password1" name="password1" type="password" required>
+        </mat-form-field>
 
-            <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-                <mat-label>Ingresa la clave nuevamente</mat-label>
-                <input matInput placeholder="Clave" formControlName="password2" name="password2" type="password"
-                    required>
-            </mat-form-field>
+        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+            <mat-label>Ingresa la clave nuevamente</mat-label>
+            <input matInput placeholder="Clave" formControlName="password2" name="password2" type="password" required>
+        </mat-form-field>
 
-            <div class="form-group row">
-                <div class="col-md-12">
-                    <div class="p-2 rounded">
+        <div class="form-group row">
+            <div class="col-md-12">
+                <div class="p-2 rounded">
 
-                        <input formControlName="condiciones" name="condiciones" id="checkbox-signup" type="checkbox"
-                            class="checkbox checkbox-primary m-2" required>
-                        <label for="checkbox-signup" style="font-size: 12px;">Estoy de acuerdo con las
-                            condiciones</label>
+                    <input formControlName="condiciones" name="condiciones" id="checkbox-signup" type="checkbox"
+                        class="checkbox checkbox-primary m-2" required>
+                    <label for="checkbox-signup" style="font-size: 12px;">Estoy de acuerdo con las
+                        condiciones</label>
 
-                    </div>
                 </div>
             </div>
-            <!-- [disabled]="!forma.valid" -->
-            <div class="form-group text-center">
-                <button [disabled]="!forma.valid" class="btn btn-lg btn-dark btn-block text-uppercase"
-                    type="submit">Registrarme
-                </button>
+        </div>
+        <!-- [disabled]="!forma.valid" -->
+        <div class="form-group text-center">
+            <button [disabled]="!forma.valid" class="btn btn-lg btn-dark btn-block text-uppercase"
+                type="submit">Registrarme
+            </button>
 
+        </div>
+
+        <div class="form-group m-b-0">
+            <div class="col-sm-12 text-center">
+                <p>Ya tenes una cuenta? | <a routerLink="/login" class="text-dark text-uppercase m-l-5"><b>Ingresa
+                            ahora</b></a>
+                </p>
             </div>
+        </div>
 
-            <div class="form-group m-b-0">
-                <div class="col-sm-12 text-center">
-                    <p>Ya tenes una cuenta? | <a routerLink="/login" class="text-dark text-uppercase m-l-5"><b>Ingresa
-                                ahora</b></a>
-                    </p>
-                </div>
-            </div>
+    </form>
 
-        </form>
-
-    </div>
 </div>
