--- a/src/app/pages/help/help.component.html
+++ b/src/app/pages/help/help.component.html
@@ -1,52 +1,44 @@
-<div class="turno-container p-2 animated fadeIn" style="text-align: -webkit-center;">
-    <div class="card bg-light mb-3" style="min-width: 18rem; max-width: 30rem;">
+<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;text-align: -webkit-center;">
 
-        <div class="m-2">
-            <div class="row">
-                <div class="col">
-                    <form #f="ngForm" (ngSubmit)="enviar( f )">
+    <form #f="ngForm" (ngSubmit)="enviar( f )">
 
-                        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-                            <mat-label>Tipo de contacto</mat-label>
-                            <mat-select ngModel name="tipo" required>
-                                <mat-option value="consulta"> Consulta </mat-option>
-                                <mat-option value="comentario"> Comentario </mat-option>
-                                <mat-option value="sugerencia"> Sugerencia </mat-option>
-                            </mat-select>
-                        </mat-form-field>
+        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+            <mat-label>Tipo de contacto</mat-label>
+            <mat-select ngModel name="tipo" required>
+                <mat-option value="consulta"> Consulta </mat-option>
+                <mat-option value="comentario"> Comentario </mat-option>
+                <mat-option value="sugerencia"> Sugerencia </mat-option>
+            </mat-select>
+        </mat-form-field>
 
-                        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-                            <mat-label>Comentario</mat-label>
-                            <textarea matInput ngModel name="comentarios" required minlength="10">
+        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+            <mat-label>Comentario</mat-label>
+            <textarea matInput ngModel name="comentarios" required minlength="10">
                                 Por favor, deje su consulta, comentario o sugerencia aquí.
                                 </textarea>
-                        </mat-form-field>
+        </mat-form-field>
 
 
-                        <mat-label>Los datos de contacto son opcionales.</mat-label>
+        <mat-label>Los datos de contacto son opcionales.</mat-label>
 
-                        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-                            <mat-label>Por favor dejenos su nombre</mat-label>
-                            <input matInput ngModel name="nombre" minlength="2">
-                        </mat-form-field>
+        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+            <mat-label>Por favor dejenos su nombre</mat-label>
+            <input matInput ngModel name="nombre" minlength="2">
+        </mat-form-field>
 
-                        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-                            <mat-label>Por favor dejenos su email</mat-label>
-                            <input matInput ngModel name="email" type="email">
-                        </mat-form-field>
+        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+            <mat-label>Por favor dejenos su email</mat-label>
+            <input matInput ngModel name="email" type="email">
+        </mat-form-field>
 
-                        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-                            <mat-label>Por favor dejenos su teléfono de contacto</mat-label>
-                            <input matInput ngModel name="telefono" minlength="8">
-                        </mat-form-field>
+        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+            <mat-label>Por favor dejenos su teléfono de contacto</mat-label>
+            <input matInput ngModel name="telefono" minlength="8">
+        </mat-form-field>
 
 
-                        <button class="btn btn-success btn-lg" [disabled]="!f.valid">Enviar</button>
+        <button class="btn btn-success btn-lg" [disabled]="!f.valid">Enviar</button>
 
-                    </form>
-                </div>
-            </div>
-        </div>
+    </form>
 
-    </div>
 </div>
