--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,17 +1,16 @@
-<div class="turno-container p-2 animated fadeIn" style="text-align: -webkit-center;">
-  <div class="card bg-light mb-3" style="min-width: 18rem; max-width: 30rem;">
+<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;text-align: -webkit-center;">
 
-    <div class="jumbotron m-2">
-      <h1 class="display-4">Bienvenido a la Web de Turnos</h1>
-      <p class="lead">Bienvenido, desde aquí puede sacar un turno y evitar la sala de esperas.</p>
-      <hr class="my-4">
-      <p> Tenga en cuenta que si usted no se encuentra lo suficientemente cerca de la recepción al momento
-        de que usted sea llamado, tendrá disponible un botón con el cual usted podrá solicitar minutos
-        extra para asistir a la ventanilla.
-      </p>
+  <div class="jumbotron">
+    <h1 class="display-4">Bienvenido a la Web de Turnos</h1>
+    <p class="lead">Desde aquí puede sacar un turno y esperar donde usted quiera evitando salas de espera!</p>
+    <hr class="my-4">
+    <p> Tenga en cuenta que si usted no se encuentra lo suficientemente cerca de la recepción al momento
+      de ser llamado, tendrá disponible un botón 'En camino' con el cual obtendrá tiempo extra 
+      para asistir a la ventanilla, y un canal de chat con su asistente que podrá acceder desde un 
+      icono de chat en la barra superior.
+    </p>
 
-      <a class="btn btn-primary btn-lg" routerLink="/public" role="button">TURNOS</a>
-    </div>
-
+    <a class="btn btn-primary btn-lg" routerLink="/public" role="button">TURNOS</a>
   </div>
+
 </div>
