--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,74 +1,74 @@
-<div class="turno-container p-2" style="text-align: -webkit-center;">
-    <div class="card bg-light mb-3" style="min-width: 18rem; max-width: 30rem;">
+<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;text-align: -webkit-center;">
 
-        <form class="m-2" ngNativeValidate #f="ngForm" (ngSubmit)="login( f )">
+    <form ngNativeValidate #f="ngForm" (ngSubmit)="login( f )">
+
+        <!---------------------------------------------------------------------->
+        <!-- EMAIL -->
+        <!---------------------------------------------------------------------->
+        <div class="my-2">
+            <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+                <mat-label>Ingrese su Email</mat-label>
+                <input #inputEmail matInput placeholder="sumail@dominio.com" [ngModel]="email" name="email">
+                <span class="input-icon" (click)="cleanEmail(inputEmail, inputPassword)"><i
+                        class="mdi mdi-close"></i></span>
+            </mat-form-field>
+        </div>
+
+        <!---------------------------------------------------------------------->
+        <!-- PASSWORD -->
+        <!---------------------------------------------------------------------->
+        <div class="my-2">
+            <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+                <mat-label>Ingrese su Password</mat-label>
+                <input #inputPassword matInput placeholder="password" ngModel name="password"
+                    [type]="hidepass ? 'password' : 'text'" required>
+                <span class="input-icon" (click)="hidepass = !hidepass" [attr.aria-label]="'Hide password'"
+                    [attr.aria-pressed]="hidepass"><i class="mdi {{hidepass ? 'mdi-eye-off' : 'mdi-eye'}}"></i></span>
+            </mat-form-field>
+        </div>
+
+        <div class="inputs-container rounded">
 
             <!---------------------------------------------------------------------->
-            <!-- EMAIL -->
+            <!-- RECUERDEME -->
             <!---------------------------------------------------------------------->
-            <div class="my-2">
-                <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-                    <mat-label>Ingrese su Email</mat-label>
-                    <input #inputEmail matInput placeholder="sumail@dominio.com" [ngModel]="email" name="email">
-                    <span class="input-icon" (click)="cleanEmail(inputEmail, inputPassword)"><i
-                            class="mdi mdi-close"></i></span>
-                </mat-form-field>
+            <div class="my-2" style="height:20px">
+                <div class="checkbox checkbox-primary pull-left">
+                    <input [(ngModel)]="recuerdame" name="recuerdame" id="checkbox-signup" type="checkbox"
+                        class="filled-in chk-col-light-blue">
+                    <label for="checkbox-signup"> &nbsp; Recordar E-mail </label>
+                </div>
+            </div>
+            <hr>
+
+
+            <!---------------------------------------------------------------------->
+            <!-- INGRESAR / GOOGLE -->
+            <!---------------------------------------------------------------------->
+            <div class="row text-center p-0 w-100">
+                <div class="col">
+                    <!-- Normal Login -->
+                    <button class="btn btn-success btn-block btn-lg p-2" type="submit">ENTRAR</button>
+                </div>
+                <div class="col">
+                    <!-- Google Login -->
+                    <button class="btn btn-danger btn-block btn-lg p-2" type="button" id="btnGoogle"
+                        data-toggle="tooltip">Google
+                    </button>
+                </div>
             </div>
 
             <!---------------------------------------------------------------------->
-            <!-- PASSWORD -->
+            <!-- REGISTRARSE -->
             <!---------------------------------------------------------------------->
-            <div class="my-2">
-                <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-                    <mat-label>Ingrese su Password</mat-label>
-                    <input #inputPassword matInput placeholder="password" ngModel name="password"
-                        [type]="hidepass ? 'password' : 'text'" required>
-                    <span class="input-icon" (click)="hidepass = !hidepass" [attr.aria-label]="'Hide password'"
-                        [attr.aria-pressed]="hidepass"><i
-                            class="mdi {{hidepass ? 'mdi-eye-off' : 'mdi-eye'}}"></i></span>
-                </mat-form-field>
+            <div class="mt-4 text-center">
+                No tenes cuenta? | <a routerLink="/register" class="text-primary m-l-5"><b class="text-uppercase">Crear
+                        cuenta</b></a>
             </div>
-
-            <div class="inputs-container rounded">
-
-                <!---------------------------------------------------------------------->
-                <!-- RECUERDEME -->
-                <!---------------------------------------------------------------------->
-                <div class="my-2" style="height:20px">
-                    <div class="checkbox checkbox-primary pull-left">
-                        <input [(ngModel)]="recuerdame" name="recuerdame" id="checkbox-signup" type="checkbox"
-                            class="filled-in chk-col-light-blue">
-                        <label for="checkbox-signup"> &nbsp; Recordar E-mail </label>
-                    </div>
-                </div>
-                <hr>
-
-
-                <!---------------------------------------------------------------------->
-                <!-- INGRESAR / GOOGLE -->
-                <!---------------------------------------------------------------------->
-                <div class="row text-center p-0 w-100">
-                    <div class="col">
-                        <!-- Normal Login -->
-                        <button class="btn btn-success btn-block btn-lg p-2" type="submit">ENTRAR</button>
-                    </div>
-                    <div class="col">
-                        <!-- Google Login -->
-                        <button class="btn btn-danger btn-block btn-lg p-2" type="button" id="btnGoogle" data-toggle="tooltip">Google
-                        </button>
-                    </div>
-                </div>
-
-                <!---------------------------------------------------------------------->
-                <!-- REGISTRARSE -->
-                <!---------------------------------------------------------------------->
-                <div class="mt-4 text-center">
-                    No tenes cuenta? | <a routerLink="/register" class="text-primary m-l-5"><b class="text-uppercase">Crear cuenta</b></a>
-                </div>
-                <div class="mt-4 text-center">
-                    <a routerLink="/home">Volver al inicio</a>
-                </div>
+            <div class="mt-4 text-center">
+                <a routerLink="/home">Volver al inicio</a>
             </div>
-        </form>
-    </div>
+        </div>
+    </form>
+
 </div>
