--- a/src/app/pages/public/search/search.component.html
+++ b/src/app/pages/public/search/search.component.html
@@ -1,53 +1,52 @@
-<div class="turno-container p-2 animated fadeIn" style="text-align: -webkit-center;">
-    <div class="card bg-light mb-3" style="min-width: 18rem; max-width: 30rem;">
+<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;text-align: -webkit-center;">
 
-        <div *ngIf="!companySelected" class="jumbotron m-2">
-            <h1 class="display-4">Ingrese la empresa</h1>
+    <div *ngIf="!companySelected" class="jumbotron">
+        <h1 class="display-4">Ingrese la empresa</h1>
 
-            <p class="p-3" style="background-color: whitesmoke; border-radius: .2rem;">
-                Puede utilizar el buscador o ingresar directamente a la empresa ingresando
-                a su web pública por ejemplo:<br>
-                <b>webturnos.herokuapp.com/public/suempresa</b>
-            </p>
+        <p class="p-3" style="background-color: whitesmoke; border-radius: .2rem;">
+            Puede utilizar el buscador o ingresar directamente a la empresa ingresando
+            a su web pública por ejemplo:<br>
+            <b>webturnos.herokuapp.com/public/suempresa</b>
+        </p>
 
-            <hr class="my-4">
-            <div class="my-2">
+        <hr class="my-4">
+        <div class="my-2">
 
-                <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-                    <mat-label>Ingrese la empresa</mat-label>
-                    <input id="inputCompany" #inputCompany matInput [matAutocomplete]="auto" placeholder="Empresa S.A."
-                        (keyup)="findCompany(inputCompany)" [value]="companySelected?.tx_company_name">
-                    <span class="input-icon"><i class="mdi mdi-close"></i></span>
-                </mat-form-field>
+            <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+                <mat-label>Ingrese la empresa</mat-label>
+                <input id="inputCompany" #inputCompany matInput [matAutocomplete]="auto" placeholder="Empresa S.A."
+                    (keyup)="findCompany(inputCompany)" [value]="companySelected?.tx_company_name">
+                <span class="input-icon"><i class="mdi mdi-close"></i></span>
+            </mat-form-field>
 
-                <mat-autocomplete (optionSelected)="setCompany($event.option.value)" #auto="matAutocomplete">
-                    <mat-option [value]="company" *ngFor="let company of companies">
-                        {{company.tx_company_name}}
-                    </mat-option>
-                </mat-autocomplete>
-            </div>
-        </div>
-
-        <div *ngIf="companySelected"  class="jumbotron m-2">
-            <p class="lead">
-                Usted esta por ir hacia la recepción de turnos de
-            </p>
-            <div class="card border-success py-4 my-4">
-                <p class="text-company">
-                    {{ companySelected.tx_company_name }}
-                </p>
-                <p style="color: darkblue; font-size: 1rem; font-weight: 400;">
-                    {{ companySelected.tx_address_street }}
-                    {{ companySelected.tx_address_number }}
-                    {{ companySelected.cd_city }}
-                </p>
-            </div>
-            <button class="btn btn-success btn-lg btn-block" (click)="goToCompany()">Ir hacia
-                {{companySelected.tx_company_name}}
-            </button>
-            <button class="btn btn-danger btn-lg btn-block" (click)="companySelected=null">
-                Volver
-            </button>
+            <mat-autocomplete (optionSelected)="setCompany($event.option.value)" #auto="matAutocomplete">
+                <mat-option [value]="company" *ngFor="let company of companies">
+                    {{company.tx_company_name}}
+                </mat-option>
+            </mat-autocomplete>
         </div>
     </div>
+
+    <div *ngIf="companySelected" class="jumbotron">
+        <p class="lead">
+            Usted esta por ir hacia la recepción de turnos de
+        </p>
+        <div class="card border-success py-4 my-4">
+            <p class="text-company">
+                {{ companySelected.tx_company_name }}
+            </p>
+            <p style="color: darkblue; font-size: 1rem; font-weight: 400;">
+                {{ companySelected.tx_address_street }}
+                {{ companySelected.tx_address_number }}
+                {{ companySelected.cd_city }}
+            </p>
+        </div>
+        <button class="btn btn-success btn-lg btn-block" (click)="goToCompany()">Ir hacia
+            {{companySelected.tx_company_name}}
+        </button>
+        <button class="btn btn-danger btn-lg btn-block" (click)="companySelected=null">
+            Volver
+        </button>
+    </div>
+
 </div>
