--- a/src/app/pages/public/tickets/tickets.component.html
+++ b/src/app/pages/public/tickets/tickets.component.html
@@ -1,47 +1,45 @@
-<div class="turno-container p-2 animated fadeIn" style="text-align: -webkit-center;">
-  <div class="card bg-light mb-3" style="min-width: 18rem; max-width: 30rem;">
+<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;text-align: -webkit-center;">
 
-    <div class="card-header">OBTENER TURNO</div>
-    <div class="card-body">
+  <div class="card-header">OBTENER TURNO</div>
+  <div class="card-body">
 
-      <div *ngIf="ticketsService.companyData">
+    <div *ngIf="ticketsService.companyData">
 
-        <h5 *ngIf="loading" class="card-title">
-          <span id="lblNuevoTicket">
-            Cargando...
-          </span>
-        </h5>
+      <h5 *ngIf="loading" class="card-title">
+        <span id="lblNuevoTicket">
+          Cargando...
+        </span>
+      </h5>
 
-        <div *ngIf="!loading">
+      <div *ngIf="!loading">
 
-          <p class="lead">
-            ¡Bienvenido! Usted esta por sacar un turno para ser atendido en
+        <p class="lead">
+          ¡Bienvenido! Usted esta por sacar un turno para ser atendido en
+        </p>
+
+        <div class="card border-success py-4 my-4">
+
+          <p class="text-company">
+            {{ ticketsService.companyData.tx_company_name }}
           </p>
 
-          <div class="card border-success py-4 my-4">
 
-            <p class="text-company">
-              {{ ticketsService.companyData.tx_company_name }}
-            </p>
-
-
-            <p style="color: darkblue; font-size: 1rem; font-weight: 400;">
-              {{ ticketsService.companyData.tx_address_street }}
-              {{ ticketsService.companyData.tx_address_number }}
-              {{ ticketsService.companyData.cd_city }}
-            </p>
-          </div>
+          <p style="color: darkblue; font-size: 1rem; font-weight: 400;">
+            {{ ticketsService.companyData.tx_address_street }}
+            {{ ticketsService.companyData.tx_address_number }}
+            {{ ticketsService.companyData.cd_city }}
+          </p>
         </div>
-
-        <button *ngFor="let skill of skills" class="btn btn-primary btn-block btn-lg"
-          (click)="nuevoTicket(skill._id, skill.cd_skill)">
-          {{skill.tx_skill}}
-        </button>
-        <button class="btn btn-info btn-lg btn-block" routerLink='/public/screen'>Pantalla</button>
-
-        <button class="btn btn-danger btn-block btn-lg" (click)="salir()">Salir</button>
       </div>
-    </div>
 
+      <button *ngFor="let skill of skills" class="btn btn-primary btn-block btn-lg"
+        (click)="nuevoTicket(skill._id, skill.cd_skill)">
+        {{skill.tx_skill}}
+      </button>
+      <button class="btn btn-info btn-lg btn-block" routerLink='/public/screen'>Pantalla</button>
+
+      <button class="btn btn-danger btn-block btn-lg" (click)="salir()">Salir</button>
+    </div>
   </div>
+
 </div>
