--- a/src/app/pages/user/dashboard/dashboard.component.html
+++ b/src/app/pages/user/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container animated fadeIn">
+<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;text-align: -webkit-center;">
     <div class="row">
         <div class="col">
             Working on it
